--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@use-gesture/react": "^10.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "react-spring": "^9.7.3",
+    "react-use-gesture": "^9.1.3",
     "theme-change": "^2.5.0"
   },
   "devDependencies": {
