--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@use-gesture/react": "^10.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.13",
     "react-router-dom": "^6.23.1",
     "react-spring": "^9.7.3",
     "react-use-gesture": "^9.1.3",
